fix : 로직 변경 및 테스트 변경